# linker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.ml  README.MD  docker-compose.override.yml  docker-compose.yml  pyproject.toml
ml_api_service/: main.py
ml_api_service/src/: ml_service.py  router.py  schemas.py  utils.py
ml_api_service/src/core/: config.py  lifespan.py
src/: main.py
src/core/: config.py  exceptions.py  lifespan.py  logger.py  resources.py
src/core/entities/: note.py  user.py
src/db/: mongo.py  qdrant.py  rabbit.py
src/di/: api.py  auth.py  rabbit.py
src/interfaces/: model_service_interface.py  note_repo_interface.py  note_service_interface.py  queue_interface.py  user_repo_interface.py  vector_repo_interface.py  vectorizer_interface.py
src/models/: note.py  user.py
src/repos/: base_mongo_repo.py  mongo_repo.py  note_mongo_repo.py  user_mongo_repo.py  vector_repo.py
src/routers/: __init__.py  auth_router.py  note_router.py
src/schemas/: auth.py  note.py
src/services/: auth_service.py  ml_gateway_service.py  ml_service.py  note_service.py  queue_service.py  queue_service_02.py  vectorizer.py
src/usecases/: create_note.py  delete_note_usecase.py  get_all_notes_usecase.py  get_note_usecase.py  update_note.py
src/utils/: safe_exec.py
src/workers/: base.py  base_run.py  linker.py  vectorizer.py
src/workers/linker/: run.py  (+2 more)
test/: conftest.py  smoke_test.sh  test_mongo.py  test_note_router.py  test_queue.py
test/db/: mongo.py
test/docker/: client.py  mongo.py  rabbit.py
test/http/: client.py
test/utils/: waiters.py
(+19 files in other folders)
